# powershell-agent

./: .env.example  .gitignore  BUILD_INSTALL.md  LICENSE  QUICKSTART.md  README.md  cli.py  doc.md  examples.py  mcp_doc_groq.md  powershell_agent.py  pyproject.toml  test_basic.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test.yml
powershell_agent/: __init__.py  agent.py  config.py  executor.py  mcp.py  memory.py  prompt.py  tools.py  ui.py
tests/: test_executor.py  test_memory.py  test_tools.py
