[tool.poetry]
name = "powershell-agent"
version = "0.2.0"
description = "Agentic tool for executing PowerShell commands with streaming support"
authors = ["User"]
readme = "README.md"
license = "MIT"
packages = [{include = "powershell_agent.py"}]

[tool.poetry.dependencies]
python = "^3.10"
groq = "^1.0.0"

[tool.poetry.scripts]
powershell-agent = "powershell_agent:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
